Fix tags visibility

--- a/src/main/resources/view/WhiteTheme.css
+++ b/src/main/resources/view/WhiteTheme.css
@@ -354,6 +354,8 @@
     -fx-background-color: black;
     -fx-padding: 1 3 1 3;
     -fx-border-radius: 10;
-    -fx-background-radius: 2;
+    -fx-background-radius: 10;
     -fx-font-size: 11;
+    -fx-font-weight: 700;
+    -fx-font-style: italic;
 }
